Add navBar and settings

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
-  padding: 50px;
+  padding: 0;
   font-family: sans-serif;
+}
+
+.ScoreTable {
+  padding: 10px 10% 0 10%;
 }
